--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,7 @@ pip-log.txt
 *.swp
 .idea
 atlassian-ide-plugin.xml
+
+!workflow_china/controller.pyc
+!workflow_china/workflow.pyc
+!workflow_china/workflow_func.pyc
