UPDIS-501 实习生入院手续流程表单开发

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "wkf_group_ext"]
 	path = wkf_group_ext
 	url = https://github.com/TommyU/wkf_group_ext
+[submodule "wkf_msg"]
+	path = wkf_msg
+	url = https://github.com/TommyU/wkf_msg
